--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "redux": "^5.0.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
