Refactor user profile handling: rename createUserProfileDocument to createUserProfileDocumentOrGetProfile, update cart loading logic, and enhance error handling in setInitialCart function

--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,14 @@
 VITE_APP_ENV=production
 
-VITE_FIREBASE_API_KEY=""
-VITE_FIREBASE_AUTH_DOMAIN=""
-VITE_FIREBASE_PROJECT_ID=""
-VITE_FIREBASE_STORAGE_BUCKEY=""
-VITE_FIREBASE_MEASSAGING_SENDER_ID=""
-VITE_FIREBASE_APP_ID=""
-VITE_MEASSUREMENT_ID=""
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKEY=
+VITE_FIREBASE_MEASSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+VITE_MEASSUREMENT_ID=
 
 
 
-
-
-
-
-
-
+VITE_STRIPE_SECRET_KEY=
+VITE_STRIPE_PUBLIV_KEY=
