--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.3.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
     "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "motion": "^11.13.1",
@@ -25,12 +27,13 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "stripe": "^17.4.0"
+    "stripe": "^17.4.0",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
