--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "typeRoots": ["./node_modules/@types", "./"] 
+        "typeRoots": ["./node_modules/@types", "./*.d.ts"], 
     },
-    "include": ["src", "declaration.d.ts"]
+    "include": ["src", "declaration.d.ts", "vite-env.d.ts"]
 }
