--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^5.3.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
+    "@types/redux-logger": "^3.0.13",
     "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "motion": "^11.13.1",
