--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test-watch": "jest --watch *.js *.jsx *.ts *.tsx"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.3.0",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/redux-logger": "^3.0.13",
     "dotenv": "^16.4.7",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -42,8 +44,10 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
+    "ts-jest": "^29.2.5",
     "vite": "^6.0.1",
     "vite-plugin-pwa": "^0.21.1",
     "workbox-cli": "^7.3.0"
