Enhance project configuration and improve code structure with lazy loading and environment variable management

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.env
 .env.development
+.env.production
 
 # Local Netlify folder
 .netlify
-dev-dist
+dev-dist/
+
+test
